--- a/app/styles/icons.css
+++ b/app/styles/icons.css
@@ -29,17 +29,14 @@
   text-decoration: inherit;
   width: 1em;
   text-align: center;
-  /* opacity: .8; */
 
   /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
 
   /* fix buttons height, for twitter bootstrap */
+  height: 1em;
   line-height: 1em;
-
-  /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
 
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
